--- a/SurveyTool/WebContent/css/style.css
+++ b/SurveyTool/WebContent/css/style.css
@@ -548,7 +548,8 @@ footer {margin-top: 10px;}
 .routes-select select {margin: 0px 8px;}
 
 .previewFileUpliaded {text-align: center;
-	margin-top: 5px;}
+	margin-top: 5px;
+	margin-bottom: 10px;}
 .previewFileUpliaded img{max-width: 60%}
 
 /*----------------------------------------------*\
