create user panel component

--- a/SurveyTool/.settings/org.eclipse.wst.common.component
+++ b/SurveyTool/.settings/org.eclipse.wst.common.component
@@ -56,6 +56,9 @@
         <dependent-module deploy-path="/WEB-INF/lib" handle="module:/resource/SurveyEngine/SurveyEngine">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="UserPanel.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/UserPanel/UserPanel">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="java-output-path" value="/SurveyTool/build/classes"/>
         <property name="context-root" value="SurveyTool"/>
     </wb-module>
