--- a/SurveyTool/WebContent/css/stylePoll.css
+++ b/SurveyTool/WebContent/css/stylePoll.css
@@ -58,7 +58,15 @@ form fieldset {min-height: 140px;}
 .legendPoll ul {list-style: none;
 	margin: 0px;
 	padding: 0px;}
-	
+
+/*colors*/	
 .red {color: #F7464A;}
-.cian {color: #46BFBD;}
+/*.cian {color: #46BFBD;}*/
+.cian {color: #576C99;}
+.yellow {color: #FFB506;}
 .gray {color: #C5C5C5;}
+.brown {color: #B28B6E;}
+.green {color: #ADC6A6;}
+.blue {color: #57A4DA;}
+.purple {color: #E3DBEC;}
+.black {color: #151C25;}
