--- a/SurveyTool/WebContent/css/style.css
+++ b/SurveyTool/WebContent/css/style.css
@@ -548,7 +548,7 @@ footer {margin-top: 10px;}
 
 /** questions **/
 .panel-question {width: 95%;
-	margin: 30px auto;
+	margin: 15px auto;
 	text-align: center;
 	background-color: #fff;
     border: 1px solid #1F4B71;
@@ -561,6 +561,7 @@ footer {margin-top: 10px;}
     border-color: #1F4B71;
     border-radius: 7px;
     width: 100%;
+    padding: 3px 15px;
     display: inline-block;}
 .panel-question .panel-heading a {color: #000;}
 .panel-question .panel-heading a:hover, .panel-question .panel-heading a:focus {color: #70FFFF;}
