Registe, profile and close session

--- a/SurveyTool/WebContent/css/style.css
+++ b/SurveyTool/WebContent/css/style.css
@@ -144,6 +144,7 @@ textarea {resize:none;
 	position: absolute;
 	right: -130px;
     top: 26px;}
+
 .error:before{content: '';
 	border-top: 8px solid transparent;
 	border-bottom: 8px solid transparent;
@@ -153,7 +154,15 @@ textarea {resize:none;
 	position: absolute;
 	top: 5px;}
 
-
+.error-profile{background-color: #A94442;
+	padding: 6px 12px;
+	border-radius: 4px;
+	color: white;
+	font-weight: bold;
+	width: 120px;
+	position: absolute;
+	right: -130px;
+    top: 0px;}
 /*----------------------------------------------*\
 		$HEADER_PAGE
 \*----------------------------------------------*/
@@ -247,6 +256,16 @@ footer {margin-top: 10px;
 .login-frame form h3 {margin: 20px 0px;}
 .form-group label {width: 100%;}
 .login-button {margin-bottom: 6px !important;}
+
+.register-frame {width: 30%;
+    margin-top: 30px;display:none;}
+.register-frame form {min-width: 250px;
+    width: 85%;
+    border: 1px solid #e0e0e0;
+    background-color: #fbfbfb;
+    padding: 25px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(69, 105, 136, 0.3) !important;}
+.register-frame form h3 {margin: 20px 0px;}
 
 /*----------------------------------------------*\
 		$USER_PANEL_SURVEY
