--- a/SurveyTool/WebContent/css/style.css
+++ b/SurveyTool/WebContent/css/style.css
@@ -728,7 +728,26 @@ footer {margin-top: 10px;
 .poll-table-tr-th-deadline {width: 15%;}
 .poll-table-tr-th-numresp {width: 16%;}
 
-.iframe-example {border: 2px solid #CCCCCC;
+.iframe-example {/*border: 2px solid #CCCCCC;*/
     padding: 15px;
-    width: 475px;
-    margin: 160px auto;}
+    /*width: 475px;*/
+    margin: 20px auto;
+    display: table;}
+.code-poll-frame {border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 10px 20px 20px;
+    width: 700px;
+    margin: 10px auto;}
+.poll-size {margin-top: 15px;}
+.poll-size legend {font-size: 1.1em;
+    border: none;
+    margin-bottom: 0px;
+    float: left;
+    width: inherit;
+    margin-right: 10px;
+    padding: 5px 0px;
+    font-weight: bold;}
+.poll-size input {width: 75px;
+    text-align: right;
+    display: inline;
+    height: 30px;}
