--- a/SurveyTool/WebContent/css/style.css
+++ b/SurveyTool/WebContent/css/style.css
@@ -57,7 +57,7 @@ h2 {width: auto;
     font-weight: bold;}
 .st-styles .form-control, 
 .st-styles .form-control-small {color: #4A4A4A;
-	border-color: #4A4A4A;}
+	border-color: #4A4A4A; margin-top: 0 !important;}
 
 
 /*focus*/
@@ -629,6 +629,9 @@ footer {margin-top: 10px;
 .question-frame-multimedia button {margin-left: 60px;}
 
 
+
+
+
 .multimedia-item button {font-size: 1.3em;
     margin-left: 5px;}
 .multimedia-item i {font-size: 1.3em;}
@@ -654,6 +657,29 @@ footer {margin-top: 10px;
 .likert-legend div {float:left;
 	width: 33.3%;
 	text-align: center;}
+
+.matrix-title {
+	padding: 5px;
+	text-align: center;}
+
+
+	
+.matrix-options {display: inline-flex;
+    width: 100%;
+    text-align: center;}
+.matrix-options-frame {border: 1px solid #000;
+    width: 60%;
+    margin: 0 auto;}
+.matrix-options-frame div {float:left;
+	margin:	5px 0px;
+	width: 14.2%;}
+.matrix-options-frame div input[type="radio"] {width: 100%;}
+.matrix-legend {width: 99%;
+    margin-top: 5px;
+    display: inline-block;}
+.matrix-legend div {float:left;
+	width: 33.3%;
+	text-align: center;}
 	
 .option-list {width: 70%;
 	margin: 0 auto;
@@ -661,6 +687,11 @@ footer {margin-top: 10px;
 .option-item {margin: 5px 0px;
     display: inline-block;
     clear: both;
+    width: 100%;}
+.option-item-add {margin: 5px 0px;
+    display: inline-block;
+    clear: both;
+    float:center;
     width: 100%;}
 .option-item .circle-info {}
 .option-title {width: 70% !important;
@@ -711,7 +742,37 @@ footer {margin-top: 10px;
 .survey-finish-content {width: 50%;
 	margin: 280px auto;
 	text-align: center;}
-
+	
+.question-files-frame {border: 1px solid #555;
+	margin: 0px 0px;
+	padding: 5px 5px;
+    border-radius: 5px;
+    text-align: left;
+    position: relative;
+    min-height:30px !important;}
+    
+.question-options {background-color: #C8C8C8;
+    padding: 1.5%;
+    margin-bottom: 2%;
+    margin-top: 0px !important;
+    margin-left: 0px !important;
+    margin-right: 0px !important;
+    width: 100%;
+    display: inline-block;}
+    
+.question-response-settings {
+    margin-top: 0px !important;
+    margin-left: 0px !important;
+    margin-right: 0px !important;
+    width: 100%;
+    display: inline-block;}
+.question-response-settings label{
+    font-weight: normal;
+    }
+.question-response-settings-sub label{
+	color: #C8C8C8;
+	font-weight: normal;
+	}
 /*----------------------------------------------*\
 		$POLLS
 \*----------------------------------------------*/
