--- a/SurveyTool/WebContent/css/style.css
+++ b/SurveyTool/WebContent/css/style.css
@@ -178,14 +178,14 @@ h1 {float: left;
 	margin-top: 5px;
     margin-bottom: 5px;
     text-align: center;}
-h1 img {width: 125px;
+h1 img {width: 90px;
 	margin-right: 20px;}
 h1 span{font-size: 0.6em;
     position: absolute;
     top: 73px;
     left: 169px;}
 .logo {float:left;}
-.title-header {margin-top: 28px;}
+.title-header {margin-top: 14px;}
 .title-header p {font-size: 0.5em;}
 .header-buttons {float:right;
 	margin-top: 33px;
@@ -193,6 +193,9 @@ h1 span{font-size: 0.6em;
 .header-buttons a {margin-left: 35px;}
 button span {margin-left: 5px;}
 
+.paddingUserZone{
+	padding: 40px 5px !important;
+}
 /*----------------------------------------------*\
 		$BODY_CONTENT
 \*----------------------------------------------*/
